--- a/views/layout.erb
+++ b/views/layout.erb
@@ -22,7 +22,7 @@
 </head>
 <body>
   <div class="row text-center" id="logo-stripe">
-    <img src="img/logo_anim2.gif" alt="" id="logo">
+    <a href="http://thirtylabs.com/" title="ThirtyLabs" id="logo">ThirtyLabs</a> 
   </div>
   <div class="container-fluid">
     <div class="row-fluid">
